testsuite/tests/typecheck/should_fail/T9634.hs
module T9634 where

data X = 1
